src/objects/acfTask_Master__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfDescription__c</fullName>
        <description>Click Loans</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acfIsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Click Loans</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfLink_page__c</fullName>
        <description>Click Loans</description>
        <label>Link page</label>
        <picklist>
            <picklistValues>
                <fullName>acfBankDetails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>acfPostloginQuestions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>acfDocumentDashboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfStage__c</fullName>
        <description>Click Loans</description>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Creation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfSubject__c</fullName>
        <description>Click Loans</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Click Loans Task Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>acfDescription__c</columns>
        <columns>acfIsActive__c</columns>
        <columns>acfLink_page__c</columns>
        <columns>acfSubject__c</columns>
        <columns>acfStage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Task Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Task_name_rule_for_hardcoded_names</fullName>
        <active>true</active>
        <errorConditionFormula>If(AND(ISCHANGED(acfSubject__c),OR((PRIORVALUE(acfSubject__c) = &apos;Upload Bank Stmt&apos;),(PRIORVALUE(acfSubject__c) = &apos;Upload Identity Verification&apos;))),true,false)</errorConditionFormula>
        <errorDisplayField>acfSubject__c</errorDisplayField>
        <errorMessage>You don&apos;t have access to edit this field.</errorMessage>
    </validationRules>
</CustomObject>